--- a/index.html
+++ b/index.html
@@ -1,178 +1,145 @@
-<!--
-Nom du fichier   : index.html
-Chemin complet   : /var/www/html/index.html
-Descriptif       : Interface web responsive pour déclencher le clignotement Ethernet,
-                   afficher son état en temps réel et consulter les logs.
-Dépendances      : ethernet_status.php, trigger_blink.php, scripts/ethernet_blink.sh
-Fonctionnement   : Utilise JavaScript pour interroger le backend toutes les secondes
-                   (AJAX) et interagir avec l'interface via un bouton Clignoter.
-Auteur           : Sylvain SCATTOLINI
-Version          : 1.0
-Date             : 2025-06-18
--->
-
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>État Ethernet</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 90hv;
-      font-family: sans-serif;
-      background: #111;
-      color: #0f0;
-      display: flex;
-      flex-direction: column;
-    }
+  <head>
+    <meta charset="UTF-8">
+    <title>État Ethernet</title>
+    <style>
+      html, body {
+        font-family: sans-serif;
+        margin: 0;
+        padding: 0;
 
-    button {
-      width: 100%
-    }
+        background: #111;
+      }
 
-    .container {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-    }
+      body {
+        display: flex;
+        flex-direction: column;
+        width: 97vw;
+        height: 83vh;
+      }
 
-    .top {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex: 1;
-    }
+      .top {
+        height: 33.33vh;
+              border: 5px solid #0f0;
+        margin: 20px 5px 20px 5px;
+      }
 
-    .status-box {
-      border-radius: 10px;
-      transition: background-color 0.5s;
-    }
+      .status-box {
+        width: 100%;
+        transition: background-color 0s;
+        height: 100%;
+      }
 
-    .log {
-      background: #000;
-      padding: 1em;
-      overflow-y: auto;
-      font-family: monospace;
-      border-top: 1px solid #333;
-    }
+      .log {
+        flex:1;
+        background: #111;
+        color: #0f0;
+        font-family: monospace;
+        padding: 1em;
+        overflow-y: auto;
+        font-size: 1.6rem;
+      }
 
     .controls {
       display: flex;
       flex-wrap: wrap;
-      gap: 0.5em;
-      padding: 1em;
-      justify-content: space-between;
-      align-items: center;
+      box-sizing: border-box;
+      width:100%;
+      padding: 1.2em;
       background: #222;
+      justify-content: space-between;
     }
 
-    .controls input {
-      width: 50px;
-      padding: 0.3em;
-    }
-
-    .controls button {
+    #duration, #interval {
+      
       padding: 0.5em 1em;
       font-weight: bold;
       background: #333;
       color: #0f0;
-      border: 1px solid #0f0;
-      border-radius: 5px;
+      border: 5px solid #0f0;
+      border-radius: 20px;
       cursor: pointer;
+      font-size: 3rem;
+      margin: 30px 0;
+      width: 100px;
     }
 
-    #start {
+
+    #execute {
       width: 100%;
-    }
-    @media (min-width: 600px) and (orientation: landscape) {
-
-    
-      .container {
-        flex-direction: row;
-      }
-
-      .top {
-        width: 300px;
-        height: 100vh;
-      }
-
-      .status-box {
-        width: 300px;
-        height: 300px;
-      }
-
-      .log {
-        flex: 1;
-        height: 100vh;
-        font-size: 0.9em;
-      }
+      padding: 0.5em 1em;
+      font-weight: bold;
+      background: #333;
+      color: #0f0;
+      border: 5px solid #0f0;
+      border-radius: 20px;
+      cursor: pointer;
+      font-size: 3rem;
+      margin: 30px 0;
     }
 
-    @media (max-width: 599px), (orientation: portrait) {
-      .controls, button {
-        font-size: 1.2rem;
-      }
-      .status-box {
-        width: 100vw;
-        aspect-ratio: 2 / 1;
-        margin: 0;
-      }
-
-      .log {
-        height: calc(100vh - 100vw - 120px); /* carré + contrôle */
-        font-size: 1.1em;
-      }
-      input {
-        font-size: 1.2rem; 
-      }
+    .input-group {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap:2em;
     }
-  </style>
-</head>
-<body>
 
-  <div class="container">
-    <div class="top">
-      <div id="status" class="status-box"></div>
-    </div>
-    <div class="log" id="log"></div>
-  </div>
+    .input-group label {
+      color: #0f0;
+      font-size: 3rem;
+      margin-bottom: 0.2em;
+    }
+    </style>
+  </head>
 
-<div class="controls">
-  Boucles <input type="number" id="duration" value="10" min="1" title="Durée (boucles)">
-  Durée <input type="number" id="interval" value="10" min="1" title="Intervalle (sec)">
-  <button onclick="triggerBlink()">🔁 Clignoter maintenant</button>
-</div>
+  <body>
+      <div class="top"><div id="status" class="status-box"></div></div>
+      <div class="log" id="log"></div>
+      <div class="controls">
+        <div class="input-group">
+          <label for="duration">Boucles</label>
+          <input type="number" id="duration" value="10" min="1" placeholder="Boucles" title="Boucles">
+        </div>
+        <div class="input-group">
+          <label for="duration">Durée</label>
+          <input type="number" id="interval" value="10" min="1" placeholder="Durée" title="Durée (sec)">
+        </div>        
+        <button id="execute" onclick="triggerBlink()">Clignoter maintenant</button>
+      </div>
 
-<script>
-async function fetchStatus() {
-  const res = await fetch('ethernet_status.php');
-  const data = await res.json();
+    <script>
+    async function triggerBlink() {
+        try {
+            const res = await fetch('trigger_blink.php', { method: 'POST' });
+            const data = await res.json();
+            alert(data.message || 'Déclenchement OK');
+        } catch (e) {
+            alert('Erreur');
+        }
+    }
+    </script>
 
-  document.getElementById('status').style.backgroundColor = data.link === 'up' ? 'green' : 'black';
-  const log = document.getElementById('log');
-  log.innerHTML = data.logs.join('<br>');
-  log.scrollTop = log.scrollHeight;
-}
+    <script>
+      async function fetchStatus() {
+        try {
+          const response = await fetch('ethernet_status.php'); // à adapter
+          const data = await response.json();
 
-async function triggerBlink() {
-  const duration = document.getElementById('duration').value;
-  const interval = document.getElementById('interval').value;
+          const box = document.getElementById('status');
+          box.style.backgroundColor = data.link === "up" ? "green" : "black";
 
-  const res = await fetch('trigger_blink.php', {
-    method: 'POST',
-    headers: {'Content-Type': 'application/json'},
-    body: JSON.stringify({ duration, interval })
-  });
+          const logElem = document.getElementById('log');
+          logElem.innerHTML = data.logs.map(line => line).join('<br>');
+          logElem.scrollTop = logElem.scrollHeight;
+        } catch (e) {
+          console.error("Erreur fetch", e);
+        }
+      }
 
-  const data = await res.json();
-  alert(data.message || 'Clignotement lancé');
-}
-
-setInterval(fetchStatus, 1000);
-fetchStatus();
-</script>
-</body>
+      setInterval(fetchStatus, 1000);
+      fetchStatus();
+    </script>
+  </body>
 </html>
